--- a/app/globals.css
+++ b/app/globals.css
@@ -86,3 +86,9 @@ body::-webkit-scrollbar-track {
 body::-webkit-scrollbar-thumb {
   background: #636363;
 }
+
+@media screen and (min-width: 640px) {
+  .bg-parallax {
+    background-attachment: fixed;
+  }
+}
